# NetworkManager

./: configure.ac
clients/cli/: common.c  common.h  connections.c  devices.c  nmcli-completion  settings.c
include/: nm-macros-internal.h
introspection/: nm-device-ip-tunnel.xml  nm-device-macvlan.xml  nm-device.xml
libnm/: Makefile.am  NetworkManager.h  libnm.ver  nm-device-ip-tunnel.c  nm-device-ip-tunnel.h  nm-device-macvlan.c  nm-device-macvlan.h  nm-device-tun.c  nm-device-tun.h  nm-device-vxlan.c  nm-device-vxlan.h  nm-device.c  nm-device.h  nm-object.c  nm-types.h
libnm-core/: Makefile.libnm-core  nm-connection.c  nm-connection.h  nm-core-internal.h  nm-core-types.h  nm-dbus-interface.h  nm-setting-connection.c  nm-setting-ip-config.c  nm-setting-ip-config.h  nm-setting-ip-tunnel.c  nm-setting-ip-tunnel.h  nm-setting-ip4-config.c  nm-setting-ip4-config.h  nm-setting-macvlan.c  nm-setting-macvlan.h  nm-setting-tun.c  nm-setting-tun.h  nm-setting-vlan.c  nm-setting-vxlan.c  nm-setting-vxlan.h  nm-setting-wired.h  nm-utils-private.h  nm-utils.c
libnm-core/tests/: test-general.c
libnm-glib/: nm-device-generic.c
libnm-util/: Makefile.am  libnm-util.ver  nm-setting-tun.c  nm-setting-tun.h  nm-setting-vlan.c
man/: NetworkManager.conf.xml.in  nmcli.1.in
po/: POTFILES.in
src/: Makefile.am  nm-firewall-manager.c  nm-ip4-config.c  nm-ip6-config.c  nm-manager.c  nm-types.h
src/devices/: nm-arping-manager.c  nm-arping-manager.h  nm-device-ethernet.c  nm-device-generic.c  nm-device-ip-tunnel.c  nm-device-tun.c  (+8 more)
src/devices/tests/: Makefile.am  test-lldp.c
(+19 files in other folders)
